[package]
name = "frontend-wasm"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
robotics_lib = {version="0.1.21", registry="kellnr"}#{path="../Robotic-Lib"}#{path="../Robotic-Lib"} #{version="0.1.21", registry="kellnr"}      # {path="../Robotic-Lib"}
# worldgen_unwrap = {version="0.1.2", registry="kellnr"} 

lazy_static = "1.4.0"
rand = { version = "0.8.5", features = [] }
strum = "0.26.1"
strum_macros = { version = "0.26.1", features = [] }
serde = { version = "1.0.193", features = ["serde_derive"] }

# "client" = {path="../robot_web_python/client_example"}
# tungstenite = "0.21"
# tokio = { version = "1.35.0", features = ["full"] }
# url = "1.7.2"

# Frontend Dependencies
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4.6"
# Yew Dependencies
# trunk = "0.18"
implicit-clone= {version="0.3.6"}
yew = { version="0.21", features = ["csr"] }
yew-agent = "0.3"
yewdux = "0.10"
bounce = "0.9.0"
gloo-timers = "0.3"


# Custom Worldgen Dependencies
egui = "0.24.0"
egui_extras = { version = "0.24.0", features = ["all_loaders"] }
serde-binary = "0.5.0"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen-futures = "0.4" 
bincode = "1.3.3"
js-sys = "0.3"
