[package]
name = "frontend_wasm"
version = "2.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
robotics_lib = {version="0.1.21", registry="kellnr"}
# worldgen_unwrap = {version="0.1.2", registry="kellnr"} 
rust_eze_tomtom = {version = "1.1.5", registry = "kellnr" }
bob_lib = { version = "0.1.1", registry = "kellnr" }
bessie = { version = "0.1.11", registry = "kellnr" }
ohcrab_weather = { version = "0.1.2", registry = "kellnr" }
rust_and_furious_dynamo = { version = "0.1.2", registry = "kellnr" }
vent_tool_ascii_crab = { version = "0.1.4", registry = "kellnr" }
charting_tools = { version = "1.0.4", registry = "kellnr" }
tungstenite = "0.21.0"
url = { version = "2.5.0", features = [] }
rand = "0.8.4"
lazy_static = "1.4.0"
strum = "0.26.1"
strum_macros = { version = "0.26.1", features = [] }
serde = { version = "1.0.193", features = ["serde_derive"] }

# Frontend Dependencies
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4.6"
# Yew Dependencies
implicit-clone= {version="0.3.6"}
yew = { version="0.21", features = ["csr"] }
yew-hooks = "0.3"
bounce = "0.9.0"
web-sys = {version="0.3", features = ["Window", "Document", "Element", "HtmlElement", "DomRect"]}
# stylist = "0.13"


# Custom Worldgen Dependencies
egui = "0.24.0"
egui_extras = { version = "0.24.0", features = ["all_loaders"] }
serde-binary = "0.5.0"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen-futures = "0.4" 
bincode = "1.3.3"
js-sys = "0.3"